--- a/openmdao.gui/src/openmdao/gui/static/css/mdao-styles.css
+++ b/openmdao.gui/src/openmdao/gui/static/css/mdao-styles.css
@@ -122,7 +122,7 @@ nav ul ul a:hover {
 
 /* console history box */
 #historybox {
-  background-color:grey;
+  background-color: gray;
   border-style:groove;
 }
 
@@ -172,16 +172,16 @@ nav ul ul a:hover {
 } 
 
 /* CSS3 */
-.borderradius nav, dl dt,  h3, .button {
+.borderradius nav, .button {
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
   border-radius:4px; 
 }
-.cssgradients nav, dl dt, h3, .button {
+.cssgradients nav, .button {
   background-image:-moz-linear-gradient(0% 22px 90deg, #222, #999);
   background-image:-webkit-gradient(linear, 0% 0%, 0% 70%, from(#999), to(#222));
 }
-.boxshadow.rgba nav, dl dt, h3 .button {
+.boxshadow.rgba nav, .button {
   -moz-box-shadow:2px 2px 2px rgba(0,0,0,.75);
   -webkit-box-shadow:2px 2px 2px rgba(0,0,0,.75);
   box-shadow:2px 2px 2px rgba(0,0,0,.75);
